# LNS-app

./: .gitignore  README.md  image-viewer-demo-ICON.ipynb  proposal_history.ipynb  pyproject.toml  setup.cfg  start.py
.ipynb_checkpoints/: proposal_history-checkpoint.ipynb
data-examples/: MJOLNIRdataExample.ipynb  data-parabola.csv
data-examples/Mnf2_oct_2021/: summary.rtf
data-examples/Mnf2_oct_2021/data/: camea2021n001371.hdf  camea2021n001376.hdf  camea2021n001377.hdf  camea2021n001378.hdf  camea2021n001379.hdf  camea2021n001384.hdf  camea2021n001386.hdf  camea2021n001387.hdf  camea2021n001388.hdf
data-examples/Mnf2_oct_2021/data/20211624/: camea2021n001373.hdf  camea2021n001375.hdf
examples/: data.csv  example_1.ipynb
examples/Mnf2_oct_2021/data/: camea2021n001380.hdf
examples/Mnf2_oct_2021/data/2103456/: camea2021n001374.hdf  camea2021n001381.hdf  camea2021n001382.hdf  camea2021n001385.hdf
examples/icon/: b1509_1700-3000.fits
src/lns_app/: notebook_generator.py  proposal_mvc.py  proposals_mvc.py
src/lns_app/.ipynb_checkpoints/: plot-checkpoint.ipynb
src/lns_app/camea/: notebook_generator.py  proposals_mvc.py
src/lns_app/examples/Mnf2_oct_2021/data/2103456/: camea2021n001372.hdf  camea2021n001383.hdf
src/lns_app/icon/: inspect_image.py
src/lns_app/templates/: template_1.ipynb
src/lns_app/utils/: inspect_folders.py  widgets.py
templates/: template_1.ipynb
