[metadata]
name = LNS-apps
version = 0.0.1
description = Package for the LNS apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikibonacci/LNS-apps.git
author = LMS and LNS PSI
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Logo = https://raw.githubusercontent.com/aiidalab/aiidalab-qe/master/miscellaneous/logos/QE.jpg

[aiidalab]
title = LNS app
